duniverse/lwt/test/ppx_expect/cases/match_2.expect
File "match_2.ml", line 3, characters 4-6:
Error: This expression has type unit but an expression was expected of type
         'a Lwt.t
