duniverse/lwt/test/ppx_expect/cases/match_2.ml
let _ =
  match%lwt
    ()
  with
  | () ->
    Lwt.return ();;
